<resources>
    <string name="app_name">Dms_Master</string>
    <string name="title_activity_welcome_home">Welcome_home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="admin_add_event">Add Event</string>
    <string name="log_out">Log Out</string>
    <string name="search_title">Search</string>
    <string name="add_event">Add Event</string>
    <string name="delele_event">Delete Event</string>
    <string name="upload_file">Upload File</string>
    <string name="title_activity_admin_dashboard">admin_dashboard</string>
    <string-array name="dashboardIconName">
        <item>Events</item>
        <item>List Events</item>
        <item>User List</item>
        <item>Assign Event</item>
        <item>Userwise Events</item>
        <item>Add Event</item>
        <item>Reserved</item>
        <item>Reserveds</item>
    </string-array>
    <string name="title_activity_admin_home">admin_home</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="title_activity_user_home">user_home</string>
    <string name="search_hint">Search Here</string>
</resources>
