<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_36dp"
        android:showAsAction="ifRoom|collapseActionView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/add_event"
        android:title="@string/add_event"
        android:icon="@drawable/ic_create_new_folder_white_36dp"
        android:showAsAction="ifRoom|collapseActionView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/delete_event"
        android:title="@string/delele_event"
        android:icon="@drawable/ic_delete_white_36dp"
        android:showAsAction="ifRoom|collapseActionView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/logout"
        android:title="@string/log_out"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_power_settings_new_white_48dp"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>